<resources>
    <string name="facebook_app_id">1545587202205385</string>
    <string name="match_not_loaded">I\'m loading all the matches, please wait a moment!</string>
    <string name="match_loaded">Match Loaded</string>
    <string name="server_error">We are sorry! We have some server bug, try later we are fixing them</string>
    <string name="socal_post">Hey follow here my bet</string>
    <string name="share_with">Share your bet with..</string>
    <string name="event_win">Match won: </string>
    <string name="event_lost">Match lost: </string>
    <string name="match_terminated">Finished</string>
    <string name="match_posticipated">Posticipate</string>
    <string name="match_annullato">Canceled</string>
    <string name="match_break">Interval</string>
    <string name="delate_match_dialog_question">I must have been wrong to read this match \n I\'m sorry \n You\'re sure you want to delete it?</string>
    <string name="autocomplete_textview_hint">"Home team - Away team"</string>
    <string name="eventi_rimanenti">Remaining events </string>
    <string name="eventi_in_corso">In progress </string>
    <string name="scommessa_completata">All match are finished </string>
    <string name="delate_bet_dialog_question_singolar">Delete this bet?</string>
    <string name="delete_bet_dialog_subtitle_singolar">You will not able to recover it</string>
    <string name="delete_bet_dialog_explaination_singolar">All the data of this bet \n will be lost</string>
    <string name="intervallo">Interval</string>
    <string name="delate_bet_dialog_question_plural">Delete the bet?</string>
    <string name="delete_bet_dialog_subtitle_plural">You will not able to recover them</string>
    <string name="delete_bet_dialog_explaination_plural">All the data of those bet \n will be lost</string>
    <string name="no_result_found">Ops! This is embarrassing.. \nI don\'t know the result of this match!</string>
    <string name="add_new_match_dialog_title">Add new match?</string>
    <string name="delete_match_dialog_title">Delete </string>
    <string name="confirm">CONFIRM</string>
    <string name="annulla">CANCEL</string>
    <string name="totale_importo_scommesso">Bet amount:</string>
    <string name="field_undefined">no def.</string>
    <string name="totale_vincita">Total winnings:</string>
    <string name="sistema_errori">Errors:</string>
    <string name="dialog_illustration_set_bet">Select what you bet on </string>
    <string name="number_avveniments">Number events: </string>
    <string name="current_year">2018</string>
    <string name="next_year">2019</string>
    <string name="drawer_open">Open Main Menu</string>
    <string name="drawer_close">Close ain Menu</string>
    <string name="whats_new_title">Check out what has changed</string>
    <string name="whats_new">Release notes</string>
    <string name="text_was_copied_to_clipboard">Text copied to clipboard.</string>
    <string name="copy_to_clipboard">Copy</string>
    <string name="image_could_not_be_read">The image was not found in the data sent.</string>
    <string name="image_does_not_exist">The image was not found on your phone.</string>
    <string name="camera_app_not_found">Camera app not found.</string>
    <string name="gallery_io_error">Image could not be loaded.</string>
    <string name="media_store_returned_null">Gallery returned no image to me.</string>
    <string name="camera_app_error">Camera app error.</string>
    <string name="camera_no_image_returned">Camera app returned no image.</string>
    <string name="please_wait">Please wait</string>
    <string name="loading_image">Loading image..</string>
    <string name="please_tap_on_column">Please tap on a text column first</string>
    <string name="send_mail">Drop me a line.</string>
    <string name="hocr2pdf_title">
        <a href="market://details?id=com.renard.betty">Text Fairy</a>
        from exactCODE
    </string>
    <string name="hocr2pdf_summary">Text Fairy is an OCR application available in stores whose code is open source.
        This application implements all the basic functionality that an OCR app must have and it has been used as an initial platform
        for develop Betty Power
    </string>
    <string name="leptonica_title">
        <a href="http://www.leptonica.com/">leptonica</a>
    </string>
    <string name="leptonica_summary">Leptonica is a pedagogically-oriented open source site
        containing software that is broadly useful for image processing and image analysis
        applications.
    </string>
    <string name="tesseract_ocr_title">
        <a href="https://github.com/tesseract-ocr/tesseract">tesseract-ocr</a>
    </string>
    <string name="privacy_details">The Application does not collect any kind of information about you and your use,
    all the bet that you register are saved anonymously on your device. The information is encrypted in order to prevent
    to other applications to access it.</string>
    <string name="tesseract_ocr_summary">Tesseract is probably the most accurate open source OCR
        engine available.
    </string>
    <string name="contact_welcome_text">Hi, my name is Renard. I have created the Text Fairy in my
        free time. I hope she is useful for you.
    </string>
    <string name="download_failed">Downloading of %1$s failed!</string>
    <string name="app_name">Betty Power</string>
    <string name="tips">Tips</string>
    <string name="ocr_language_delete">Delete</string>
    <string name="ocr_language_title">Manage Languages</string>
    <string name="pref_summary_rate">Rate the text fairy</string>
    <string name="pref_summary_license">Learn about the software that was used to create Betty Power.
    </string>
    <string name="pref_summary_contact">Learn about the creator and supply feedback.</string>
    <string name="pref_title_help">Show tips</string>
    <string name="pref_title_contact">Contact information</string>
    <string name="pref_title_license">Licence info</string>
    <string name="error_create_file">I\'m sorry but was not able to store your photo on the SD
        card.
    </string>
    <string name="share_subject">scanned text</string>
    <string name="save_success">Save successful</string>
    <string name="save_fail">Save failed!</string>
    <string name="share_chooser_title">Select how you want to share the text</string>
    <string name="progress_start">Starting</string>
    <string name="download_language">Download</string>
    <string name="empty_grid_download_language">Download your language.</string>
    <string name="progress_dewarp">Straightening text</string>
    <string name="progress_ocr">Reading text</string>
    <string name="delete">Delete</string>
    <string name="edit_title">Change title</string>
    <string name="cancel">Cancel</string>
    <string name="edit_dialog_title">Enter a title for your document</string>
    <string name="delete_error">Sorry, I could not delete this document</string>
    <string name="error_could_not_take_photo">Sorry, I could not read the photo</string>
    <string name="empty" />
    <string name="cropping_image">Cropping image</string>
    <string name="error_title">Error</string>
    <string name="pdf_creation_message">Creating your PDF!</string>
    <string name="option_view_mode">Switch</string>
    <string name="document_layout_dialog">How many columns?</string>
    <string name="layout_complex">More than one column.</string>
    <string name="layout_simple">One column.</string>
    <string name="saving_document">Saving Document</string>
    <string name="button_column_pick_completed">start text recognition</string>
    <string name="export_as_pdf">PDF</string>
    <string name="delete_language_title">Delete %1$s?</string>
    <string name="delete_language_message">You\'ll free up %1$d kb.</string>
    <string name="delete_dialog_message">Deleting Documents..</string>
    <string name="progress_pfd_creation">Creating page %1$d/%2$d for %3$s.</string>
    <string name="option_text">Text settings</string>
    <string name="option_content">Table of contents</string>
    <string name="option_line_spacing">Line spacing</string>
    <string name="option_text_alignment">Text alignment</string>
    <string name="options_preview_text">This is a preview of your current text settings. Press the
        back key to continue reading.\nLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
        diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam
        voluptua.
    </string>
    <string name="progress_analyse_layout">I\'m analysing the layout. Please wait some seconds.
    </string>
    <string name="progress_image_detection">Searching for text</string>
    <string name="progress_assemble_pix">I\'m assembling the final picture now.</string>
    <string name="progress_choose_columns">Please choose the text and images you want in the final
        document
    </string>
    <string name="no_sd_card">No SD card mounted. Is the phone connected to your pc? If so please
        remove it and try again.
    </string>
    <string name="content_description_fairy">The helpful text fairy</string>
    <string name="crop_title">Choose image section</string>
    <string name="text_options_title">Change your text settings</string>
    <string name="edit_title_hint">Enter a title</string>
    <string name="option_gallery_title">Pick an image from the gallery</string>
    <string name="option_camera_title">Make a new photo</string>
    <string name="show_tips">Show tips</string>
    <string name="document_help_title">You can manage your document here.</string>
    <string name="join">Join</string>
    <string name="join_documents_title">Joining Documents</string>
    <string name="join_documents_result">%1$d documents joined</string>
    <string name="start_app">Let\'s go</string>
    <string name="install_error_disk_space">Not enough disk space. You need to free %1$d MB on your
        SD card
    </string>
    <string name="install_error">Could not install configuration files.</string>
    <string name="toc_title">Table of contents</string>
    <string name="document_list_help_title">Manage your scanned documents here.</string>
    <string name="toc_help_title">Here you see a list of all pages in the document</string>
    <string name="crop_help_title">You can crop and rotate your photo now</string>
    <string name="continue_ocr">Continue</string>
    <string name="default_ocr_language">eng</string>
    <string name="default_ocr_display_language">English</string>
    <string name="start_speaking">Speak text</string>
    <string name="ocr_result_is_bad">Oops. Something doesn\'t seem right.</string>
    <string name="ocr_result_is_ok">I think i got most of the text.</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="promo_video_title">Learn more.</string>
    <string name="install_tip_1">I can follow all soccer result in the word
    </string>
    <string name="install_tip_2">I\'m not very good at reading what you bet, correct me! </string>
    <string name="pref_title_privacy">Privacy Policy</string>
    <string name="pref_summary_privacy">View the privacy policy</string>
    <string name="install_tip_3">Iextract soccer match by taking a photo to the bet ticket
    </string>
    <string name="data_tracking_on">"Betty Power does not manipulate or store your bets, and it never will!"</string>
    <string name="data_tracking_off">Betty Power does not manipulate or store your bets, and it never will!</string>
    <string name="palimpsest_waiting">WE NEED A FEW SECONDS</string>
    <string name="palimpsest_waiting_explanation">The first time you are using the application we need to charge the whole soccer matches in the world, the operation require a few seconds! Thank you for waiting</string>
    <string name="palimpsest_waiting_connection">Check your internet Connection!</string>
</resources>