<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/content_view"
                android:orientation="vertical">

    <TextView
        android:id="@+id/tip3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/check"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/install_tip_3"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tip1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip3"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/check"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/install_tip_1"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tip2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tip1"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:drawableLeft="@drawable/cross"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:text="@string/install_tip_2"
        android:textSize="18sp" />


    <TextView
            android:textSize="18sp"
            android:layout_below="@+id/tip2"
            android:clickable="true"
            android:background="@drawable/btn_start_activity2"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:id="@+id/promo"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/promo_video_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <RelativeLayout
            android:id="@+id/fairy_container"
            android:layout_width="wrap_content"
            android:layout_above="@+id/button_start_app"
            android:layout_height="wrap_content">

        <LinearLayout
                android:visibility="gone"
                android:id="@+id/fairy_text_bubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:background="@drawable/speech_bubble"
                android:paddingBottom="10dip"
                android:paddingLeft="12dip"
                android:paddingRight="20dip"
                android:paddingTop="10dip">

            <TextView
                    android:id="@+id/fairy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/start_app"
                    android:textAppearance="@style/FairySpeechbubble"/>
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button_start_app"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@android:string/ok"
        android:textColor="@color/cardview_light_background"
        android:theme="@style/ColoredButton"
        android:visibility="visible" />

</RelativeLayout>