<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="wrap_content">

    <include layout="@layout/toolbar"
             android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:id="@+id/show_licences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start_activity2"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/two_line_item_margin"
                    android:gravity="left|center"
                    android:text="@string/pref_title_license"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/pref_summary_license"
                    android:textAppearance="@android:style/TextAppearance.Small" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey6" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey6" />


            <LinearLayout
                android:id="@+id/privacy_policy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_start_activity2"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/two_line_item_margin"
                    android:gravity="left|center"
                    android:text="@string/pref_title_privacy"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|center"
                    android:text="@string/pref_summary_privacy"
                    android:textAppearance="@android:style/TextAppearance.Small" />
            </LinearLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:background="@color/grey6" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentStart="true"
                android:background="@color/grey6" />

        </LinearLayout>
    </ScrollView>

    <TextView
            android:padding="@dimen/default_padding"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/grey3"
            android:layout_marginBottom="@dimen/default_element_padding"
            android:id="@+id/version_name"
            android:layout_alignParentBottom="true"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
</RelativeLayout>