<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background">

    <Button
        android:id="@+id/add_dialog_cancel"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:elevation="0dp"
        android:text="@string/annulla"
        android:textColor="@color/blu_facebook"
        app:layout_constraintEnd_toStartOf="@+id/add_dialog_confirm"
        app:layout_constraintTop_toBottomOf="@+id/match_time_text_view" />

    <Button
        android:id="@+id/add_dialog_confirm"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@color/cardview_light_background"
        android:elevation="0dp"
        android:text="@string/confirm"
        android:textColor="@color/green_for_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_time_text_view" />

    <TextView
        android:id="@+id/add_match_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_match_dialog_title"
        android:textAlignment="center"
        android:textColor="@color/blu_facebook"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/away_team_add_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/home_team_add_logo"
        tools:layout_editor_absoluteY="16dp" />

    <com.bettypower.dialog.CustomTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textNoSuggestions"
        android:textColor="@color/Text_dark"
        android:completionThreshold="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_team_add_logo" />

    <TextView
        android:id="@+id/match_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

    <ImageView
        android:id="@+id/home_team_add_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/add_match_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_eagle_shield"
        android:layout_marginLeft="8dp" />

    <ImageView
        android:id="@+id/away_team_add_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/add_match_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shield_with_castle_inside" />
</android.support.constraint.ConstraintLayout>